# Code

./: .gitignore  gdqmc-result
C++ code/GpBCS_S.C.CPMC/: update.txt
C++ code/GpBCS_S.C.CPMC/BCSHubbard_for_GpBCS/: CMakeLists.txt
C++ code/GpBCS_S.C.CPMC/BCSHubbard_for_GpBCS/include/: bcs.h  bcsMethod.h
C++ code/GpBCS_S.C.CPMC/BCSHubbard_for_GpBCS/script/: generateInputFile.py  initialOrderParameter.py
C++ code/GpBCS_S.C.CPMC/BCSHubbard_for_GpBCS/source/: bcs.cpp  bcsDetail.cpp  bcsMethod.cpp  bcsTuneMu.cpp  bcsTunePairing.cpp  main.cpp
C++ code/GpBCS_S.C.CPMC/SC_afqmcConstraintPathBP_3.1_ChargeContinuous_afqmclab_icf/source/NiupNidnIcf/: CMakeLists.txt
C++ code/GpBCS_S.C.CPMC/SC_afqmcConstraintPathBP_3.1_ChargeContinuous_afqmclab_icf/source/NiupNidnIcf/include/: CMakeLists.txt  NiupNidnAuxIcf.h  NiupNidnIcf.h  NiupNidnSampleIcf.h
C++ code/GpBCS_S.C.CPMC/SC_afqmcConstraintPathBP_3.1_ChargeContinuous_afqmclab_icf/source/NiupNidnIcf/test/: CMakeLists.txt  NiupNidnSampleTest.cpp
C++ code/GpBCS_S.C.CPMC/SC_afqmcConstraintPathBP_3.1_ChargeContinuous_afqmclab_icf_ExactDensityinput/source/NiupNidnSDOperationIcf/test/: CMakeLists.txt
C++ code/GpBCS_S.C.CPMC/SC_afqmcConstraintPathBP_3_HFB_Mix_VMpBCS/: CMakeLists.txt
C++ code/GpBCS_S.C.CPMC/SC_afqmcConstraintPathBP_3_HFB_Mix_VMpBCS/include/: BCS.h  BCSSDOperation.h  HubbardSOCMeasureFixedBCSSD.h  HubbardSOCMeasureObserveBCSSD.h  NiupNidnBCSOperation.h  afqmcConstraintPath.h  afqmcWalkerPop.h  ghf.h  ghfMethod.h  vmpBCS.h
C++ code/GpBCS_S.C.CPMC/SC_afqmcConstraintPathBP_3_HFB_Mix_VMpBCS/include/LBFGSpp-master/include/: LBFGS.h
C++ code/GpBCS_S.C.CPMC/SC_afqmcConstraintPathBP_3_HFB_Mix_VMpBCS/include/LBFGSpp-master/include/LBFGS/: Param.h
C++ code/GpBCS_S.C.CPMC/SC_afqmcConstraintPathBP_3_HFB_Mix_VMpBCS/scripts/: afqmc_param  generateInputFile_tp.py  get.py  model_param
C++ code/GpBCS_S.C.CPMC/SC_afqmcConstraintPathBP_3_HFB_Mix_VMpBCS/scripts/dataAna_icf/: Charge  Spin  a.out  dataAna.cpp
C++ code/GpBCS_S.C.CPMC/SC_afqmcConstraintPathBP_3_HFB_Mix_VMpBCS/scripts/tensorHao_Extract/: Green1  GreenMatrixICF_step_1  tensorHaoExtract.cpp
C++ code/GpBCS_S.C.CPMC/SC_afqmcConstraintPathBP_3_HFB_Mix_VMpBCS/scripts_GHF/1BandHubbardModel/: ghf_param  initialOrderParameter.py  latt_param
C++ code/GpBCS_S.C.CPMC/SC_afqmcConstraintPathBP_3_HFB_Mix_VMpBCS/source/: BCS.cpp  BCSSDOperation.cpp  HubbardSOCMeasureFixedBCSSD.cpp  NiupNidnBCSOperation.cpp  afqmcConstraintPathBackPropagation.cpp  afqmcConstraintPathMeasure.cpp  afqmcConstraintPathMethod.cpp  afqmcConstraintPathSetWalker.cpp  afqmcWalkerPop.cpp  ghfDetail.cpp  vmpBCS.cpp
C++ code/GpBCS_S.C.CPMC/SC_afqmcConstraintPathBP_4/scripts/densityMatrixToGpBCS/: CMakeLists.txt
C++ code/qRBM-CPMC/: Notes
CPMC_Lab2.0/CPMC_Lab_20160129/: 10x10x1_50u50d_U4.00_kx+0.0000_ky+0.0000_kz+0.0000_Nwlk_200_Nwlk10.mat  12x12x1_72u72d_U4.00_kx+0.0000_ky+0.0000_kz+0.0000_Nwlk_200_Nwlk12.mat  14x14x1_98u98d_U4.00_kx+0.0000_ky+0.0000_kz+0.0000_Nwlk_200_Nwlk14.mat  2x10x1_10u10d_U4.00_kx+0.0000_ky+0.0000_kz+0.0000_Nwlk_200_Nwlk10.mat  2x12x1_12u12d_U4.00_kx+0.0000_ky+0.0000_kz+0.0000_Nwlk_200_Nwlk12.mat  2x14x1_14u14d_U4.00_kx+0.0000_ky+0.0000_kz+0.0000_Nwlk_200_Nwlk14.mat  2x16x1_16u16d_U4.00_kx+0.0000_ky+0.0000_kz+0.0000_Nwlk_200_Nwlk16.mat  2x18x1_18u18d_U4.00_kx+0.0000_ky+0.0000_kz+0.0000_Nwlk_200_Nwlk18.mat  2x1x1_1u1d_U4.00_kx+0.0819_ky+0.0000_kz+0.0000_Nwlk_100_170830_204909.mat  2x20x1_20u20d_U4.00_kx+0.0000_ky+0.0000_kz+0.0000_Nwlk_200_Nwlk20.mat  2x2x1_2u2d_U4.00_kx+0.0000_ky+0.0000_kz+0.0000_Nwlk_200_Nwlk2.mat  2x4x1_4u4d_U4.00_kx+0.0000_ky+0.0000_kz+0.0000_Nwlk_200_Nwlk4.mat  2x6x1_6u6d_U4.00_kx+0.0000_ky+0.0000_kz+0.0000_Nwlk_200_Nwlk6.mat  2x8x1_8u8d_U4.00_kx+0.0000_ky+0.0000_kz+0.0000_Nwlk_200_Nwlk8.mat  4x4x1_8u8d_U4.00_kx+0.0000_ky+0.0000_kz+0.0000_Nwlk_200_Nwlk4.mat  6x6x1_18u18d_U4.00_kx+0.0000_ky+0.0000_kz+0.0000_Nwlk_200_Nwlk6.mat  8x8x1_32u32d_U4.00_kx+0.0000_ky+0.0000_kz+0.0000_Nwlk_200_Nwlk8.mat  CPMC_Lab.m  README.txt  batchsample.m  initialization.m  measure.m  sample.m  sample1.m  stblz.m  stepwlk.m  validation.m
CPMC_Lab2.0/CPMC_Lab_plus/: 16x4x1_28u28d_U8.00_kx+0.0000_ky+0.0000_kz+0.0000_Nwlk_100_itv_Em100.mat  16x4x1_28u28d_U8.00_kx+0.0000_ky+0.0000_kz+0.0000_Nwlk_200_itv_Em200.mat  16x4x1_28u28d_U8.00_kx+0.0000_ky+0.0000_kz+0.0000_Nwlk_300_itv_Em300.mat  2x2x1_2u2d_U4.00_kx+0.0000_ky+0.0000_kz+0.0000_Nwlk_100_Nblksteps100.mat  4x4x1_7u7d_U8.00_kx+0.0000_ky+0.0000_kz+0.0000_Nwlk_100_N_wlk100.mat  4x4x1_7u7d_U8.00_kx+0.0000_ky+0.0000_kz+0.0000_Nwlk_100_Nblksteps1.mat  4x4x1_7u7d_U8.00_kx+0.0000_ky+0.0000_kz+0.0000_Nwlk_100_Nblksteps100.mat  4x4x1_7u7d_U8.00_kx+0.0000_ky+0.0000_kz+0.0000_Nwlk_100_U8.mat  4x4x1_7u7d_U8.00_kx+0.0000_ky+0.0000_kz+0.0000_Nwlk_100_itv_Em100.mat  4x4x1_7u7d_U8.00_kx+0.0000_ky+0.0000_kz+0.0000_Nwlk_101_N_wlk101.mat  4x4x1_7u7d_U8.00_kx+0.0000_ky+0.0000_kz+0.0000_Nwlk_101_itv_Em101.mat  4x4x1_7u7d_U8.00_kx+0.0000_ky+0.0000_kz+0.0000_Nwlk_102_N_wlk102.mat  CPMC_Lab.m  (+141 more)
Exact results/: DMRG.xlsx  Exact Diagonalization.xlsx
Fortran_gdqmc_icf_pin/: update note.txt
Matrix/: HF.m  HF_H.m  HF_n.m  H_K_pin.m  H_PIN_up.m  Matrix_X.m  X_RBM_Initialization_Pickup.m
gdqmc-1.3/: data_manip.f90  lattice_inform.f90
python/: test.py
temp/: ising.f90  ising.fun
(+1977 files in other folders)
